# exchange-recon-cockpit

./: .env.example  .gitignore  ARCHITECTURE.md  BUSINESS-CASE.md  CODING-AGENTS.md  DEMO.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
ExchangeReconBpmn/: ExchangeReconBpmn.bpmn
ExchangeReconSolution/ExchangeReconBpmn/: ExchangeReconBpmn.bpmn  bindings_v2.json  entry-points.json  operate.json  package-descriptor.json  project.uiproj
docs/: architecture-deck.drawio
docs/diagrams/: README.md  agents.drawio  components.drawio  context.drawio  deployment.drawio  index.drawio  sequence.drawio
matching-agent/: entry-points.json  langgraph.json  main.py  mcp_client.py  project.uiproj  pyproject.toml
posting-prep-agent/: entry-points.json  main.py  project.uiproj  pyproject.toml
scripts/: go-public.sh
specs/exchange-settlement-e2e/: design.md  requirements.md  tasks.md
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src/auth/: useAuth.tsx
src/components/: ExceptionQueue.tsx  Header.tsx  LoginScreen.tsx  ReconciliationView.tsx  VarianceDrawer.tsx
src/lib/: config.ts  demoData.ts  exchange.test.ts  (+6 more)
variance-agent/: .env.example  agent.mermaid  entry-points.json  main.py  mcp_client.py  post_correction.py  project.uiproj  pyproject.toml  uipath.json
variance-agent/.uipath/: .telemetry.json  variance-agent.0.0.1.nupkg  variance-agent.0.0.2.nupkg
variance-agent/evaluations/eval-sets/: smoke-test.json
variance-agent/evaluations/evaluators/: llm-judge-output.json
(+1 files in other folders)
